--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,4 @@
 name=play-guice
-title=Play with Guice
+title=Play with Guice and Simple Dynamic configuration page in CoffeeScript
 description=This is a Play example that uses Google Guice (https://code.google.com/p/google-guice/) for runtime dependency injection.
 tags=playframework,guice,dependency-injection
